--- a/app/src/main/res/layout/item_view_pager.xml
+++ b/app/src/main/res/layout/item_view_pager.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/root_view"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/root_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
     <com.dingmouren.example.layoutmanagergroup.widget.FullScreenVideoView
         android:id="@+id/video_view"
         android:layout_width="match_parent"
@@ -11,24 +12,27 @@
         android:clickable="false"
         android:focusable="false"
         />
+
     <ImageView
         android:id="@+id/img_thumb"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
         android:clickable="false"
         android:focusable="false"
+        android:scaleType="centerCrop"
         android:visibility="visible"
         />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
         android:layout_marginRight="10dp"
         android:gravity="center_horizontal"
+        android:orientation="vertical"
         >
+
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -40,55 +44,66 @@
                 android:layout_alignParentTop="true"
                 android:src="@mipmap/header_icon_2"
                 app:civ_border_color="@android:color/white"
-                app:civ_border_width="2dp" />
+                app:civ_border_width="2dp"/>
+
             <ImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:background="@drawable/circle_big_red"
-                android:src="@mipmap/add_icon"
-                android:tint="@android:color/white"
-                android:scaleType="centerInside"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="40dp"
+                android:background="@drawable/circle_big_red"
+                android:scaleType="centerInside"
+                android:src="@mipmap/add_icon"
+                android:tint="@android:color/white"
                 />
         </RelativeLayout>
 
         <TextView
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_marginTop="16dp"
             android:drawableTop="@mipmap/heart_icon"
-            android:layout_marginTop="16dp"
+            android:gravity="center"
             android:text="1.6w"
             android:textColor="@android:color/white"
-            android:gravity="center"
             />
+
         <TextView
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_marginTop="16dp"
             android:drawableTop="@mipmap/msg_icon"
-            android:layout_marginTop="16dp"
+            android:gravity="center"
             android:text="1.6w"
             android:textColor="@android:color/white"
-            android:gravity="center"
             />
+
         <TextView
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:drawableTop="@mipmap/share_icon"
             android:layout_marginTop="16dp"
+            android:drawableTop="@mipmap/share_icon"
+            android:gravity="center"
             android:text="1.6w"
             android:textColor="@android:color/white"
-            android:gravity="center"
             />
     </LinearLayout>
+
     <ImageView
         android:id="@+id/img_play"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/play_arrow"
+        android:layout_centerInParent="true"
+        android:alpha="0"
         android:clickable="true"
         android:focusable="true"
-        android:alpha="0"
-        android:layout_centerInParent="true"
+        android:src="@drawable/play_arrow"
+        />
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_alignParentBottom="true"
         />
 </RelativeLayout>
